sizing for medium almost done. need to fix copyright margin on bottom. tthen to work on mobile size.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,7 +33,7 @@
   header > .row nav.top-bar ul.title-area {
     background-color: transparent;
     height: 120px;
-    width: 500px;
+    width: 200px;
   }
   
   header > .row nav.top-bar ul.title-area li.name {
@@ -49,7 +49,7 @@
 
   header > .row nav.top-bar ul.title-area li.name a img {
     position: absolute;
-    margin-top: 35px;
+    margin-top: 45px;
     margin-left: 50px;
     height: 50px;
   }
@@ -82,9 +82,9 @@
   
   header > .row nav.top-bar .top-bar-section ul.right {
     height: 80px;
-    width: 450px;
+    width: 420px;
     display: inline;
-    margin-top: 50px;
+    margin-top: 40px;
     background-color: transparent;
   
   }
@@ -93,7 +93,6 @@
     font-size: 11px;
     letter-spacing: 2px;
     text-transform: uppercase;
-    border-bottom: 2px solid #1ACAC8;
     color: #1ACAC8;
     background-color: transparent;
   }
@@ -108,6 +107,98 @@
   header > .row nav.top-bar .top-bar-section ul.right li#about a {
     margin-left: none;
   }
+
+  #content {
+    background-color: white; 
+    margin: 0px;
+  }
+  #content .row {
+    margin-left: 0px;
+    margin-right: 0px;
+    max-width: none;
+  }
+
+  #content .row  #scenery {
+    height: 200px;
+    background-image: url('/images/scenery.png');
+  }
+
+  #content .row .large-9.medium-12.small-12.columns {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  #content .row .large-3.medium-12.small-12.columns {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  ul {
+  list-style-type: none;
+  margin-left: 0px;
+  }
+  .row p#paragraph {
+    font-size: 22px;
+    line-height: 1.3;
+    font-weight: 600;
+    margin: 10px 10px;
+  }
+  
+  #content .row .features {
+    background: #1ACAC8;
+    color: black;
+    line-height: 32px;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    border-top: 1px solid #149B99;
+    height: 200px;
+  }
+  
+  #content .row .features li {
+    color: black;
+    padding: 7px;
+    border-top: none;
+    border: 1px solid gray;
+    font-size: 11px;
+  }
+  
+  #content .row .features ul #features_head {
+    background-color: black;
+    color: #1ACAC8;
+  }
+
+#footer {
+    background-color: #2A2C32;
+    background-image: url(/images/border.png);
+    background-position: top center;
+    background-repeat: repeat-x;
+  }
+  
+  #footer .row .row {
+    margin-top: 35px;
+  }
+
+  ul {
+    list-style: none;
+    line-height: 2.2;
+  } 
+   ul li.active a {
+    color: #1ACAC8;
+   }
+  
+   #footer .row #copyright {
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+   }
+
+   #footer .row .large-12.columns p {
+    font-weight: 400;
+  }
+
+
  
 } 
   
@@ -134,6 +225,7 @@
   
   header > .row {
     height: 143px;
+    background-color: transparent;
   }
   
   header > .row nav.top-bar {
@@ -211,6 +303,9 @@
     margin-left: none;
   }
   
+  #content {
+    background-color: white; 
+  }
   
   #content .row  #scenery {
     height: 200px;
@@ -257,23 +352,8 @@
     color: #1ACAC8;
   }
   
-  
-  
-  
-  header > .row {
-    background-color: transparent;
-  }
-  
-  #content {
-    background-color: white; 
-    }
-  
-  #content > .row {
-    
-  }
-  
   #footer {
-    background-color: black;
+    background-color: #2A2C32;
     background-image: url(/images/border.png);
     background-position: top center;
     background-repeat: repeat-x;
@@ -289,7 +369,7 @@
     height: 150px;
     
   }*/
-   li.line {
+  li.line {
     width: 2px;
     height: 160px;
     background-color: #1ACAC8;
@@ -297,7 +377,11 @@
     margin-right: 20px;
     margin-top: 12px;
    }
-  
+
+  ul {
+    list-style: none;
+    line-height: 2.2;
+  } 
    ul li.active a {
     color: #1ACAC8;
    }
@@ -312,10 +396,7 @@
     padding-bottom: 3px;
    }
   
-  ul {
-    list-style: none;
-    line-height: 2.2;
-  } 
+  
 
 
 }
